# parts-llvm

./: .gitignore  README.md  README.txt  init_repos.sh  pa_cmake_debug.sh  pa_cmake_nodebug.sh  pa_submodules.sh  setup_build.sh  update_cscope.sh
clang/lib/CodeGen/: CGBuiltin.cpp
clang/lib/Sema/: SemaChecking.cpp
clang/test/CodeGen/: builtins-arm64-parts.c
clang/test/Sema/: builtins-aarch64-parts.c
include/llvm/IR/: Intrinsics.td  IntrinsicsAArch64.td  Metadata.def  Metadata.h  PartsTypeMetadata.h
include/llvm/PARTS/: AArch64InstInfo.td  Intrinsics.td  (+7 more)
lib/: CMakeLists.txt
lib/IR/: CMakeLists.txt  Metadata.cpp  PartsTypeMetadata.cpp
lib/PARTS/: CMakeLists.txt  Parts.cpp  PartsEventCount.cpp  PartsIntr.cpp  PartsLog.cpp  PartsLogStream.cpp  PartsTypeMetadata.cpp
lib/PARTS-sha3/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt
llvm/: README.md  pa_cmake_debug.sh  pa_cmake_initial.sh  pa_cmake_nodebug.sh  setup_build.sh  update_cscope.sh
llvm/lib/: CMakeLists.txt
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/Hello/: Hello.cpp
llvm/lib/Transforms/PartsOpt/: CMakeLists.txt  PartsOptCpiPass.cpp  PartsOptDataPointerArgsPass.cpp  PartsOptDpiPass.cpp  PartsOptGlobalsPass.cpp  PartsOptMainArgsPass.cpp  PartsOptRasPass.cpp
llvm/lib/Transforms/PtrTypeMD/: CMakeLists.txt  PartsCfi.cpp  PartsCpi.cpp  PartsPassCpi.cpp  PauthIntrinsics.cpp  PauthMarkGlobals.cpp  PauthPacMain.cpp  PtrTypeMD.cpp
llvm/lib/Transforms/Test/: CMakeLists.txt  MDclass.h  PauthMarkGlobals.cpp  PauthPacMain.cpp  TestPass.cpp  Test_pass.backup
parts/: setup_build.sh
(+204 files in other folders)
